WebUI/WebUI-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: WebUI
spec:
  selector:
    matchLabels:
      app: rest
  replicas: 1
  template:
    metadata:
      labels:
        app: WebUI
    spec:
      containers:
      - name: rest
        image: tejas1812/WebUI:v5
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
