WebUI/WebUI-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: WebUI-svc
  labels:
    app: rest
spec:
  type: NodePort
  selector:
    app: WebUI
  ports:
  - port: 80
    targetPort: 5000
